plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'edu.sc.seis.launch4j' version '2.5.0'
}

java {
    toolchain { languageVersion = JavaLanguageVersion.of(17) }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(Test).configureEach {
    systemProperty 'file.encoding', 'UTF-8'
}

application {
    mainClass = 'job.ResumeFilterGui'
    applicationDefaultJvmArgs = ['-Dfile.encoding=UTF-8']
}

launch4j {
    outfile = "JobKoreaResumeFilter.exe"
    mainClassName = "job.ResumeFilterGui"
    jar = "${project.buildDir}/libs/jobkorea-resume-filter-1.0.0-all.jar"
    icon = "${project.projectDir}/job.ico"
    jreMinVersion = "17"
    bundledJrePath = "${project.projectDir}/dist/jre"

    headerType = "gui"

    jvmOptions = [
            "--add-opens=java.base/java.nio=ALL-UNNAMED",
            "--add-opens=java.base/java.lang=ALL-UNNAMED",
            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
            "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED"
    ]
}

group = 'job'
version = '1.0.0'
sourceCompatibility = '17'

mainClassName = 'job.ResumeFilterGui'

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}
/*
allprojects {
    tasks.withType(JavaExec) {
        systemProperty "javax.net.ssl.trustStore", "NONE"
    }
}*/

dependencies {
    implementation fileTree(dir: 'libs', include: ['pdfbox*.jar'])
    implementation 'com.github.shin285:KOMORAN:3.3.9'
}

// 의존 JAR들을 fat JAR 안에 복사해 넣기
jar {
    manifest {
        attributes(
                'Main-Class': mainClassName
        )
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
